sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: illegal start of simple pattern
  var final:Boolean = true
      ^AlgBubbleSort1:7: error: '=' expected but ';' found.
  while (final== true){
^AlgBubbleSort1:7: error: illegal start of simple expression
  while (final== true){
         ^AlgBubbleSort1:19: error: ')' expected but '}' found.
}
^